--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
     </style>
   </head>
   <body>
-    <form method="POST" action="/">
+    <form method="POST" action="/index">
       <div class="form-group">
         <input type="text" class="form-control" placeholder="Enter Topic" name="topic"/>
       </div>
