--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ReWise</title>
+    <title>ReWise👊</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -14,9 +14,15 @@
 
   <body>
     <div class="jumbotron">
-      <form onsubmit="return confirm(document.getElementById('title').value);" method="POST" action="/">
+      <h1 class="display-4">ReWise👊</h1>
+      <form
+        onsubmit="return confirm(document.getElementById('title').value);"
+        method="POST"
+        action="/"
+      >
         <div class="form-group">
-          <input id='title'
+          <input
+            id="title"
             type="text"
             class="form-control"
             placeholder="Enter Topic"
